added the customize docker & updated client & company