@@ -1,10 +1,65 @@
-FROM maven:3-jdk-8-alpine
+# First stage
+FROM eclipse-temurin:21-jdk-alpine AS jre-builder
 
-WORKDIR /usr/src/app
+RUN mkdir /opt/app
+COPY . /opt/app
 
-COPY . /usr/src/app
-RUN mvn package
+WORKDIR /opt/app
 
-ENV PORT 5000
-EXPOSE $PORT
-CMD [ "sh", "-c", "mvn -Dserver.port=${PORT} spring-boot:run" ]
+ENV MAVEN_VERSION 3.5.4
+ENV MAVEN_HOME /usr/lib/mvn
+ENV PATH $MAVEN_HOME/bin:$PATH
+
+RUN apk update && \
+    apk add --no-cache tar binutils
+
+
+RUN wget http://archive.apache.org/dist/maven/maven-3/$MAVEN_VERSION/binaries/apache-maven-$MAVEN_VERSION-bin.tar.gz && \
+  tar -zxvf apache-maven-$MAVEN_VERSION-bin.tar.gz && \
+  rm apache-maven-$MAVEN_VERSION-bin.tar.gz && \
+  mv apache-maven-$MAVEN_VERSION /usr/lib/mvn
+
+RUN mvn package -DskipTests
+RUN jar xvf target/web-app-0.0.1-SNAPSHOT.jar
+RUN jdeps --ignore-missing-deps -q  \
+    --recursive  \
+    --multi-release 17  \
+    --print-module-deps  \
+    --class-path 'BOOT-INF/lib/*'  \
+    target/web-app-0.0.1-SNAPSHOT.jar > modules.txt
+
+# Small JRE image
+RUN $JAVA_HOME/bin/jlink \
+         --verbose \
+         --add-modules $(cat modules.txt) \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output /optimized-jdk-17
+
+# Second stage
+FROM alpine:latest
+ENV JAVA_HOME=/opt/jdk/jdk-17
+ENV PATH="${JAVA_HOME}/bin:${PATH}"
+
+# copy JRE from the base image
+COPY --from=jre-builder /optimized-jdk-17 $JAVA_HOME
+
+# Add app user
+ARG APPLICATION_USER=gersimuca
+
+# Create a user to run the application
+RUN addgroup --system $APPLICATION_USER &&  adduser --system $APPLICATION_USER --ingroup $APPLICATION_USER
+
+# Create the application directory
+RUN mkdir /app && chown -R $APPLICATION_USER /app
+
+COPY --chown=$APPLICATION_USER:$APPLICATION_USER target/*.jar /app/app.jar
+
+WORKDIR /app
+
+USER $APPLICATION_USER
+
+EXPOSE 8080
+ENTRYPOINT [ "java", "-jar", "/app/app.jar" ]
